sumo/tests/sumo/output/meandata_lanebased/errors/broken_number/errors.sumo
Error: The description of the meandata_lane 'dump_15' contains a broken number.
Quitting (on error).
